added ui, attept of populating cv with mtaCard asset

--- a/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
+++ b/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
@@ -8,40 +8,65 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Collection View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CollectionView_Practice" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="UICollectionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="M0n-IS-jA6">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="M0n-IS-jA6">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3f-wE-tc6">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3f-wE-tc6">
+                                    <size key="itemSize" width="418" height="419"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="wqy-dZ-qtU">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="wqy-dZ-qtU" customClass="CardImageCell">
+                                        <rect key="frame" x="0.0" y="177.5" width="418" height="419"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="65o-Z1-53j">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="418" height="419"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6hR-4m-1i7">
+                                                    <rect key="frame" x="90" y="33.5" width="238" height="352"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="238" id="LaE-QV-Mio"/>
+                                                        <constraint firstAttribute="height" constant="352" id="cvw-2k-qvU"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="6hR-4m-1i7" firstAttribute="centerX" secondItem="65o-Z1-53j" secondAttribute="centerX" id="6Qw-Ht-5eV"/>
+                                                <constraint firstItem="6hR-4m-1i7" firstAttribute="centerY" secondItem="65o-Z1-53j" secondAttribute="centerY" id="7i0-DS-ZeN"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <size key="customSize" width="418" height="419"/>
+                                        <connections>
+                                            <outlet property="cardImageView" destination="6hR-4m-1i7" id="4AC-6K-JxN"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="M0n-IS-jA6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="30I-C3-cko"/>
+                            <constraint firstItem="M0n-IS-jA6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SyQ-BQ-UR4"/>
+                            <constraint firstItem="M0n-IS-jA6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ZNw-iJ-Xb1"/>
+                            <constraint firstItem="M0n-IS-jA6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bpy-xn-Yrs"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="MjF-Ur-Y8O"/>
+                    <connections>
+                        <outlet property="mtaCardCollectionView" destination="M0n-IS-jA6" id="Vme-xS-c70"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
