Collection View for number of metrocards based on hard coded numberOfItemsInSection

--- a/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
+++ b/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
@@ -1,94 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nwR-rc-Vj4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9WE-er-6XV">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Card View Controller-->
+        <scene sceneID="3Tk-1r-6jW">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="UICollectionViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="g5Y-qH-qRl" customClass="CardViewController" customModule="CollectionView_Practice" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Qvr-zK-RfC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="M0n-IS-jA6">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v5j-kV-xOT">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="m3f-wE-tc6">
-                                    <size key="itemSize" width="418" height="419"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6t0-3L-TIe">
+                                    <size key="itemSize" width="414" height="598"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CardCell" id="wqy-dZ-qtU" customClass="CardImageCell">
-                                        <rect key="frame" x="0.0" y="177.5" width="418" height="419"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="65o-Z1-53j">
-                                            <rect key="frame" x="0.0" y="0.0" width="418" height="419"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6hR-4m-1i7">
-                                                    <rect key="frame" x="90" y="33.5" width="238" height="352"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="238" id="LaE-QV-Mio"/>
-                                                        <constraint firstAttribute="height" constant="352" id="cvw-2k-qvU"/>
-                                                    </constraints>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="6hR-4m-1i7" firstAttribute="centerX" secondItem="65o-Z1-53j" secondAttribute="centerX" id="6Qw-Ht-5eV"/>
-                                                <constraint firstItem="6hR-4m-1i7" firstAttribute="centerY" secondItem="65o-Z1-53j" secondAttribute="centerY" id="7i0-DS-ZeN"/>
-                                            </constraints>
-                                        </collectionViewCellContentView>
-                                        <size key="customSize" width="418" height="419"/>
-                                        <connections>
-                                            <outlet property="cardImageView" destination="6hR-4m-1i7" id="4AC-6K-JxN"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="M0n-IS-jA6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="30I-C3-cko"/>
-                            <constraint firstItem="M0n-IS-jA6" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="SyQ-BQ-UR4"/>
-                            <constraint firstItem="M0n-IS-jA6" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ZNw-iJ-Xb1"/>
-                            <constraint firstItem="M0n-IS-jA6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bpy-xn-Yrs"/>
+                            <constraint firstItem="v5j-kV-xOT" firstAttribute="top" secondItem="PAe-aL-hPB" secondAttribute="top" id="EqC-v9-XmE"/>
+                            <constraint firstItem="v5j-kV-xOT" firstAttribute="bottom" secondItem="PAe-aL-hPB" secondAttribute="bottom" id="FES-kI-UtV"/>
+                            <constraint firstItem="v5j-kV-xOT" firstAttribute="leading" secondItem="PAe-aL-hPB" secondAttribute="leading" id="czd-pV-vs8"/>
+                            <constraint firstItem="v5j-kV-xOT" firstAttribute="trailing" secondItem="PAe-aL-hPB" secondAttribute="trailing" id="rBo-nu-hyK"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="PAe-aL-hPB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="MjF-Ur-Y8O"/>
+                    <navigationItem key="navigationItem" id="Udi-zf-Yc5"/>
                     <connections>
-                        <outlet property="mtaCardCollectionView" destination="M0n-IS-jA6" id="Vme-xS-c70"/>
+                        <outlet property="collectionView" destination="v5j-kV-xOT" id="Nho-bn-kBP"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hgI-Pz-ST8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="116.51785714285714"/>
+            <point key="canvasLocation" x="895.6521739130435" y="-111.16071428571428"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="7pb-D2-s0A">
+        <scene sceneID="Zdy-6H-ytG">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nwR-rc-Vj4" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9WE-er-6XV" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qte-VU-RNt">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UMS-3V-xSN">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="5P3-4v-v5Q"/>
+                        <segue destination="g5Y-qH-qRl" kind="relationship" relationship="rootViewController" id="Il3-G7-g3J"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4oo-dv-Mch" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DEX-v9-IRT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="116.51785714285714"/>
+            <point key="canvasLocation" x="-14.492753623188406" y="-111.16071428571428"/>
         </scene>
     </scenes>
 </document>
