--- a/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
+++ b/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
@@ -16,8 +16,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v5j-kV-xOT">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="88" y="272" width="238" height="352"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="352" id="9Uq-oW-241"/>
+                                    <constraint firstAttribute="width" constant="238" id="JRg-OW-e5I"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6t0-3L-TIe">
                                     <size key="itemSize" width="414" height="598"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -26,24 +30,47 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CardSlot" translatesAutoresizingMaskIntoConstraints="NO" id="FaY-HI-OzZ">
+                                <rect key="frame" x="0.0" y="693" width="414" height="169"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oag-Df-3ZU">
+                                <rect key="frame" x="158" y="142" width="99" height="54"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="testButtonPressed:" destination="g5Y-qH-qRl" eventType="touchUpInside" id="Pf0-fm-gl3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="v5j-kV-xOT" firstAttribute="top" secondItem="PAe-aL-hPB" secondAttribute="top" id="EqC-v9-XmE"/>
-                            <constraint firstItem="v5j-kV-xOT" firstAttribute="bottom" secondItem="PAe-aL-hPB" secondAttribute="bottom" id="FES-kI-UtV"/>
-                            <constraint firstItem="v5j-kV-xOT" firstAttribute="leading" secondItem="PAe-aL-hPB" secondAttribute="leading" id="czd-pV-vs8"/>
-                            <constraint firstItem="v5j-kV-xOT" firstAttribute="trailing" secondItem="PAe-aL-hPB" secondAttribute="trailing" id="rBo-nu-hyK"/>
+                            <constraint firstItem="FaY-HI-OzZ" firstAttribute="bottom" secondItem="PAe-aL-hPB" secondAttribute="bottom" id="AnD-Sq-odX"/>
+                            <constraint firstItem="v5j-kV-xOT" firstAttribute="centerX" secondItem="Qvr-zK-RfC" secondAttribute="centerX" id="Gia-dV-e6e"/>
+                            <constraint firstItem="FaY-HI-OzZ" firstAttribute="trailing" secondItem="PAe-aL-hPB" secondAttribute="trailing" id="gBt-AP-waS"/>
+                            <constraint firstItem="FaY-HI-OzZ" firstAttribute="leading" secondItem="PAe-aL-hPB" secondAttribute="leading" id="hdo-W8-Ln2"/>
+                            <constraint firstItem="FaY-HI-OzZ" firstAttribute="top" secondItem="v5j-kV-xOT" secondAttribute="bottom" constant="69" id="kiK-DT-Xsh"/>
+                            <constraint firstItem="v5j-kV-xOT" firstAttribute="centerY" secondItem="Qvr-zK-RfC" secondAttribute="centerY" id="vm7-Gd-XqV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PAe-aL-hPB"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="dTd-3W-P8w" appends="YES" id="LdG-Ac-v3q"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="Udi-zf-Yc5"/>
                     <connections>
+                        <outlet property="cardSlot" destination="FaY-HI-OzZ" id="dRh-RT-6lz"/>
+                        <outlet property="cardSwipeRecognizer" destination="dTd-3W-P8w" id="5cp-ue-Ms9"/>
                         <outlet property="collectionView" destination="v5j-kV-xOT" id="Nho-bn-kBP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hgI-Pz-ST8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="dTd-3W-P8w">
+                    <connections>
+                        <action selector="cardSwiped:" destination="g5Y-qH-qRl" id="tOC-T6-iL7"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="895.6521739130435" y="-111.16071428571428"/>
+            <point key="canvasLocation" x="1492.753623188406" y="-189.50892857142856"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Zdy-6H-ytG">
@@ -64,4 +91,7 @@
             <point key="canvasLocation" x="-14.492753623188406" y="-111.16071428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="CardSlot" width="111" height="42"/>
+    </resources>
 </document>
