--- a/CollectionView-Practice/CollectionView-Practice/Views/MTACardImageCell.xib
+++ b/CollectionView-Practice/CollectionView-Practice/Views/MTACardImageCell.xib
@@ -10,14 +10,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cardCell" id="vnf-jj-7te" customClass="MTACardImageCell" customModule="CollectionView_Practice" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="401" height="509"/>
+            <rect key="frame" x="0.0" y="0.0" width="271" height="377"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="RyE-Za-fs3">
-                <rect key="frame" x="0.0" y="0.0" width="401" height="509"/>
+                <rect key="frame" x="0.0" y="0.0" width="271" height="377"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cQ9-bd-LPh">
-                        <rect key="frame" x="81.5" y="78.5" width="238" height="352"/>
+                        <rect key="frame" x="16.5" y="12.5" width="238" height="352"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="238" id="4rp-a9-61I"/>
                             <constraint firstAttribute="height" constant="352" id="JfJ-8h-qhP"/>
@@ -29,11 +29,11 @@
                     <constraint firstItem="cQ9-bd-LPh" firstAttribute="centerX" secondItem="RyE-Za-fs3" secondAttribute="centerX" id="SXz-Ms-8bZ"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="401" height="509"/>
+            <size key="customSize" width="271" height="377"/>
             <connections>
-                <outlet property="cardImage" destination="cQ9-bd-LPh" id="f17-rQ-gC0"/>
+                <outlet property="metroCardImage" destination="cQ9-bd-LPh" id="f17-rQ-gC0"/>
             </connections>
-            <point key="canvasLocation" x="-160" y="5"/>
+            <point key="canvasLocation" x="-141.30434782608697" y="-39.84375"/>
         </collectionViewCell>
     </objects>
 </document>
