--- a/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
+++ b/CollectionView-Practice/CollectionView-Practice/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="352" id="9Uq-oW-241"/>
-                                    <constraint firstAttribute="width" constant="238" id="JRg-OW-e5I"/>
+                                    <constraint firstAttribute="width" constant="238" id="Hle-td-NuK"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6t0-3L-TIe">
                                     <size key="itemSize" width="414" height="598"/>
@@ -70,7 +70,7 @@
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1492.753623188406" y="-189.50892857142856"/>
+            <point key="canvasLocation" x="838" y="-111"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Zdy-6H-ytG">
